--- a/HTML-e-CSS-para_iniciantes/07-projeto-portfolio/css/global.css
+++ b/HTML-e-CSS-para_iniciantes/07-projeto-portfolio/css/global.css
@@ -11,6 +11,12 @@ img {
   max-width: 100%;
 }
 
+h1 {
+  font-size: 72px;
+  line-height: 80px;
+  font-weight: bold;
+}
+
 a {
   color: inherit;
   text-decoration: none;
